raaag/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logiCore-rag-service
  namespace: logiCore
spec:
  selector:
    app: logiCore-rag
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
